--- a/_data/links.yml
+++ b/_data/links.yml
@@ -4332,3 +4332,8 @@
   cat: ind
   status: does
   date: 2020-01-17
+- title: "Deploy a scalable, energy & waste neutral, smart agricultural solution"
+  url: https://www.smartkas.com
+  cat: agr
+  status: does
+  date: 2020-04-21
